--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
-   <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">  -->
-   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <title>Password Generator | JavaScript Project</title>
 </head>
 <body>
@@ -13,9 +12,11 @@
         <h1>Password Generator</h1>
 
         <div class="inputBox">
-            <input type = "text" class="passBox" id="passBox">
-           bols" id="copyIcon"><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" /></span>
+            <input type="text" class="passBox" id="passBox">
+            <span class="material-icons">Copy</span>
         </div>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+        
 
         <input type="range" min="1" max="15" value="8"
         id="inputSlider">
